Get iOS building again

--- a/src/Lab/Experiments/TriangleNET6/TriangleNET6.csproj
+++ b/src/Lab/Experiments/TriangleNET6/TriangleNET6.csproj
@@ -20,13 +20,30 @@
         <ProjectReference Include="..\..\..\OpenGL\Silk.NET.OpenGL\Silk.NET.OpenGL.csproj" />
         <ProjectReference Include="..\..\..\Windowing\Silk.NET.Windowing\Silk.NET.Windowing.csproj" />
         <ProjectReference Include="..\SampleBase\SampleBase.csproj" />
-        <RuntimeHostConfigurationOption Include="SILK_NET_SDL_SDL_ENABLE_PINVOKE_OVERRIDE_1" Value="false" Trim="true" />
-        <RuntimeHostConfigurationOption Include="SILK_NET_SDL_SDL_ENABLE_PINVOKE_OVERRIDE_0" Value="false" Trim="true" />
-        <TrimmableAssembly Include="Silk.NET.SDL" />
     </ItemGroup>
     
     <!-- Android -->
     <ItemGroup Condition="'$(TargetFramework)' != 'net6.0-android'">
         <Compile Remove="\MainActivity.cs" />
     </ItemGroup>
+
+    <!-- iOS -->
+    <Target Name="SimulateNativePkg" BeforeTargets="BeforeBuild">
+    <PropertyGroup>
+        <!--<_Silk_NativePackages_SDL_StaticPath Condition="'$(RuntimeIdentifier)' == 'maccatalyst-x64' OR '$(RuntimeIdentifier)' == 'maccatalyst-arm64'">$(MSBuildThisFileDirectory)..\..\runtimes\maccatalyst\native\libSDL2.a</_Silk_NativePackages_SDL_StaticPath>-->
+        <_Silk_NativePackages_SDL_StaticPath Condition="$(RuntimeIdentifier) == 'iossimulator-x64' OR '$(RuntimeIdentifier)' == 'iossimulator-arm64'">$(MSBuildThisFileDirectory)..\..\..\Native\Silk.NET.SDL.Native\runtimes\iossimulator\native\libSDL2.a</_Silk_NativePackages_SDL_StaticPath>
+        <_Silk_NativePackages_SDL_StaticPath Condition="$(RuntimeIdentifier) == 'tvossimulator-x64' OR '$(RuntimeIdentifier)' == 'tvossimulator-arm64'">$(MSBuildThisFileDirectory)..\..\..\Native\Silk.NET.SDL.Native\runtimes\tvossimulator\native\libSDL2.a</_Silk_NativePackages_SDL_StaticPath>
+        <_Silk_NativePackages_SDL_StaticPath Condition="'$(RuntimeIdentifier)' == 'ios-arm64'">$(MSBuildThisFileDirectory)..\..\..\Native\Silk.NET.SDL.Native\runtimes\ios\native\libSDL2.a</_Silk_NativePackages_SDL_StaticPath>
+        <_Silk_NativePackages_SDL_StaticPath Condition="'$(RuntimeIdentifier)' == 'tvos-arm64'">$(MSBuildThisFileDirectory)..\..\..\Native\Silk.NET.SDL.Native\runtimes\tvos\native\libSDL2.a</_Silk_NativePackages_SDL_StaticPath>
+    </PropertyGroup>
+    <ItemGroup>
+        <NativeReference Include="$(_Silk_NativePackages_SDL_StaticPath)" Condition="'$(_Silk_NativePackages_SDL_StaticPath)' != ''">
+            <Kind>Static</Kind>
+            <Forceload>True</Forceload>
+            <IsCxx>True</IsCxx>
+            <SmartLink>False</SmartLink>
+            <LinkerFlags>-framework AudioToolbox -framework AVFoundation -framework CoreAudio -framework CoreBluetooth -framework CoreFoundation -framework CoreGraphics -framework CoreHaptics -framework CoreMotion -framework CoreVideo -framework GameController -framework IOKit -framework Metal -framework OpenGLES -framework QuartzCore -framework UIKit</LinkerFlags>
+        </NativeReference>
+    </ItemGroup>
+    </Target>
 </Project>
