Use ILLink to be smarter about using P/Invoke overrides (#1645)
* Build iOS in the native build + move to fat bins

* Autogenerate ILLink substitutions

* Integrate SilkTouch runtime config + add iOS back to TriangleNET6

* Update src/Core/Silk.NET.SilkTouch/NativeApiGenerator.cs

* Update SDL2 binaries (#1647)

* New binaries for SDL2 on Microsoft Windows 10.0.20348

* New binaries for SDL2 on Darwin 21.6.0 Darwin Kernel Version 21.6.0: Thu Jul  6 22:18:26 PDT 2023; root:xnu-8020.240.18.702.13~1/RELEASE_X86_64

---------

Co-authored-by: The Silk.NET Automaton <9011267+dotnet-bot@users.noreply.github.com>

* Successfully wire up the linker (it works!)

* Get iOS building again

* Fix packaging

* Split ILLink.xml and .targets generation into two tasks

* Try and get a SourceLink win

* Update Build.NuGet.cs

Co-authored-by: Kai Jellinghaus <contact@kaij.tech>

* Targets file was ignored for some reason?

---------

Co-authored-by: silkdotnet <85832961+silkdotnet@users.noreply.github.com>
Co-authored-by: The Silk.NET Automaton <9011267+dotnet-bot@users.noreply.github.com>
Co-authored-by: Kai Jellinghaus <contact@kaij.tech>

--- a/src/Lab/Experiments/TriangleNET6/TriangleNET6.csproj
+++ b/src/Lab/Experiments/TriangleNET6/TriangleNET6.csproj
@@ -2,11 +2,12 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFrameworks>net6.0;net6.0-android</TargetFrameworks>
+        <TargetFrameworks>net6.0;net6.0-android;net6.0-ios</TargetFrameworks>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <LangVersion>preview</LangVersion>
         <RuntimeIdentifiers Condition="'$(RuntimeIdentifiers)' == '' And '$(TargetFramework)' == 'net6.0'">$(NETCoreSdkRuntimeIdentifier)</RuntimeIdentifiers>
         <RuntimeIdentifiers Condition="'$(RuntimeIdentifiers)' == '' And '$(TargetFramework)' == 'net6.0-android'">android-arm64;android-x86;android-arm;android-x64</RuntimeIdentifiers>
+        <TrimMode>full</TrimMode>
     </PropertyGroup>
 
     <ItemGroup>
@@ -25,4 +26,24 @@
     <ItemGroup Condition="'$(TargetFramework)' != 'net6.0-android'">
         <Compile Remove="\MainActivity.cs" />
     </ItemGroup>
+
+    <!-- iOS -->
+    <Target Name="SimulateNativePkg" BeforeTargets="BeforeBuild">
+    <PropertyGroup>
+        <!--<_Silk_NativePackages_SDL_StaticPath Condition="'$(RuntimeIdentifier)' == 'maccatalyst-x64' OR '$(RuntimeIdentifier)' == 'maccatalyst-arm64'">$(MSBuildThisFileDirectory)..\..\runtimes\maccatalyst\native\libSDL2.a</_Silk_NativePackages_SDL_StaticPath>-->
+        <_Silk_NativePackages_SDL_StaticPath Condition="$(RuntimeIdentifier) == 'iossimulator-x64' OR '$(RuntimeIdentifier)' == 'iossimulator-arm64'">$(MSBuildThisFileDirectory)..\..\..\Native\Silk.NET.SDL.Native\runtimes\iossimulator\native\libSDL2.a</_Silk_NativePackages_SDL_StaticPath>
+        <_Silk_NativePackages_SDL_StaticPath Condition="$(RuntimeIdentifier) == 'tvossimulator-x64' OR '$(RuntimeIdentifier)' == 'tvossimulator-arm64'">$(MSBuildThisFileDirectory)..\..\..\Native\Silk.NET.SDL.Native\runtimes\tvossimulator\native\libSDL2.a</_Silk_NativePackages_SDL_StaticPath>
+        <_Silk_NativePackages_SDL_StaticPath Condition="'$(RuntimeIdentifier)' == 'ios-arm64'">$(MSBuildThisFileDirectory)..\..\..\Native\Silk.NET.SDL.Native\runtimes\ios\native\libSDL2.a</_Silk_NativePackages_SDL_StaticPath>
+        <_Silk_NativePackages_SDL_StaticPath Condition="'$(RuntimeIdentifier)' == 'tvos-arm64'">$(MSBuildThisFileDirectory)..\..\..\Native\Silk.NET.SDL.Native\runtimes\tvos\native\libSDL2.a</_Silk_NativePackages_SDL_StaticPath>
+    </PropertyGroup>
+    <ItemGroup>
+        <NativeReference Include="$(_Silk_NativePackages_SDL_StaticPath)" Condition="'$(_Silk_NativePackages_SDL_StaticPath)' != ''">
+            <Kind>Static</Kind>
+            <Forceload>True</Forceload>
+            <IsCxx>True</IsCxx>
+            <SmartLink>False</SmartLink>
+            <LinkerFlags>-framework AudioToolbox -framework AVFoundation -framework CoreAudio -framework CoreBluetooth -framework CoreFoundation -framework CoreGraphics -framework CoreHaptics -framework CoreMotion -framework CoreVideo -framework GameController -framework IOKit -framework Metal -framework OpenGLES -framework QuartzCore -framework UIKit</LinkerFlags>
+        </NativeReference>
+    </ItemGroup>
+    </Target>
 </Project>
