--- a/src/Native/Silk.NET.Assimp.Native/Silk.NET.Assimp.Native.csproj
+++ b/src/Native/Silk.NET.Assimp.Native/Silk.NET.Assimp.Native.csproj
@@ -25,6 +25,7 @@
     <Content Include="build\net461\$(PackageId).targets" PackagePath="build\net461\$(PackageId).targets" />
     <Content Include="runtimes\linux-x64\native\libassimp.so.5" PackagePath="runtimes\linux-x64\native\libassimp.so.5" />
     <Content Include="runtimes\osx-x64\native\libassimp.5.dylib" PackagePath="runtimes\osx-x64\native\libassimp.5.dylib" />
+    <Content Include="runtimes\osx-arm64\native\libassimp.5.dylib" PackagePath="runtimes\osx-arm64\native\libassimp.5.dylib" />
     <Content Include="runtimes\win-x64\native\Assimp64.dll" PackagePath="runtimes\win-x64\native\Assimp64.dll" />
     <Content Include="runtimes\win-x86\native\Assimp32.dll" PackagePath="runtimes\win-x86\native\Assimp32.dll" />
   </ItemGroup>
