Work around some deficiencies in the RC1 SDK (dotnet/sdk#35811)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
         dotnet-version: 6.0.201
     - name: Install Workloads
       # TODO: This is slow. Maybe we can make a docker container with this already done?
-      run: dotnet workload install android ios maccatalyst maui
+      run: dotnet workload install android ios maccatalyst maui wasm-tools-net6
     - name: Test
       if: ${{ github.repository != 'dotnet/Silk.NET' || !startsWith(github.ref, 'refs/tags/') }}
       # skip Clean, Restore, and Compile as this will build the affect the whole solution.
