--- a/src/Windowing/Silk.NET.Windowing/Silk.NET.Windowing.csproj
+++ b/src/Windowing/Silk.NET.Windowing/Silk.NET.Windowing.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+net8.0-macnet8.0-iosnet8.0-android<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp3.1;net5.0;net6.0;net6.0-android;net6.0-ios;net6.0-maccatalyst</TargetFrameworks>
