--- a/src/Maths/Silk.NET.Maths/Silk.NET.Maths.csproj
+++ b/src/Maths/Silk.NET.Maths/Silk.NET.Maths.csproj
@@ -1,4 +1,4 @@
-net8.0-iosnet8.0-android<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp3.1;net5.0;net6.0-android;net6.0-ios</TargetFrameworks>
