Maths unit tests are now .NET 8

--- a/src/Maths/Silk.NET.Maths.Tests/Silk.NET.Maths.Tests.csproj
+++ b/src/Maths/Silk.NET.Maths.Tests/Silk.NET.Maths.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net5.0;netcoreapp3.1;netframework4.8</TargetFrameworks>
+        <TargetFrameworks>net8.0</TargetFrameworks>
         <LangVersion>9.0</LangVersion>
         <IsPackable>false</IsPackable>
 
