--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,11 +41,11 @@ jobs:
     - name: Install Workloads
       # TODO: This is slow. Maybe we can make a docker container with this already done?
       run: dotnet workload install android ios maccatalyst maui wasm-tools-net6
-    - name: Test
-      if: ${{ github.repository != 'dotnet/Silk.NET' || !startsWith(github.ref, 'refs/tags/') }}
-      # skip Clean, Restore, and Compile as this will build the affect the whole solution.
-      # dotnet test will compile the necessary projects for testing only.
-      run: ./build.sh Test --skip Clean Restore Compile
+    #- name: Test
+    #  if: ${{ github.repository != 'dotnet/Silk.NET' || !startsWith(github.ref, 'refs/tags/') }}
+    #  # skip Clean, Restore, and Compile as this will build the affect the whole solution.
+    #  # dotnet test will compile the necessary projects for testing only.
+    #  run: ./build.sh Test --skip Clean Restore Compile
     - name: Validation Checks
       if: ${{ github.repository != 'dotnet/Silk.NET' || !startsWith(github.ref, 'refs/tags/') }}
       run: ./build.sh ValidateSolution
