--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,22 +54,25 @@ jobs:
         sdkmanager --install "platform-tools"
         sdkmanager --install "platforms;android-33"
         sdkmanager --install "platforms;android-34"
-    - name: Setup .NET 8.0
-      uses: actions/setup-dotnet@v1
-      if: ${{ steps.dotdotnet.outputs.cache-hit != 'true' }}
-      with:
-        dotnet-version: 8.0.100-rc.1.23463.5
-    - name: Setup .NET 7.0
-      uses: actions/setup-dotnet@v1
-      if: ${{ steps.dotdotnet.outputs.cache-hit != 'true' }}
-      with:
-        dotnet-version: 7.0.102
     - name: Setup .NET 6.0
       uses: actions/setup-dotnet@v1
       if: ${{ steps.dotdotnet.outputs.cache-hit != 'true' }}
       with:
         dotnet-version: 6.0.201
-    - name: Install Workloads
+    - name: Install Workloads for .NET 6
+      if: ${{ steps.dotdotnet.outputs.cache-hit != 'true' }}
+      run: dotnet workload install android ios maccatalyst maui
+    - name: Setup .NET 7.0
+      uses: actions/setup-dotnet@v1
+      if: ${{ steps.dotdotnet.outputs.cache-hit != 'true' }}
+      with:
+        dotnet-version: 7.0.102
+    - name: Setup .NET 8.0
+      uses: actions/setup-dotnet@v1
+      if: ${{ steps.dotdotnet.outputs.cache-hit != 'true' }}
+      with:
+        dotnet-version: 8.0.100-rc.1.23463.5
+    - name: Install Workloads for .NET 8
       if: ${{ steps.dotdotnet.outputs.cache-hit != 'true' }}
       run: dotnet workload install android ios maccatalyst maui wasm-tools-net6
     #- name: Test
