--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,25 +59,14 @@ jobs:
       if: ${{ steps.dotdotnet.outputs.cache-hit != 'true' }}
       with:
         dotnet-version: 6.0.201
-    - name: Install Workloads for .NET 6
-      if: ${{ steps.dotdotnet.outputs.cache-hit != 'true' }}
-      run: |
-        mv global.json notglobal.json
-        dotnet workload install android ios maccatalyst maui
-        mv notglobal.json global.json
     - name: Setup .NET 7.0
       uses: actions/setup-dotnet@v1
       if: ${{ steps.dotdotnet.outputs.cache-hit != 'true' }}
       with:
         dotnet-version: 7.0.102
-    - name: Setup .NET 8.0
-      uses: actions/setup-dotnet@v1
+    - name: Install Workloads
       if: ${{ steps.dotdotnet.outputs.cache-hit != 'true' }}
-      with:
-        dotnet-version: 8.0.100-rc.1.23463.5
-    - name: Install Workloads for .NET 8
-      if: ${{ steps.dotdotnet.outputs.cache-hit != 'true' }}
-      run: dotnet workload install android ios maccatalyst maui wasm-tools-net6
+      run: dotnet workload install android ios maccatalyst maui
     #- name: Test
     #  if: ${{ github.repository != 'dotnet/Silk.NET' || !startsWith(github.ref, 'refs/tags/') }}
     #  # skip Clean, Restore, and Compile as this will build the affect the whole solution.
