--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ permissions:
   packages: write
 jobs:
   Build:
-    runs-on: macos-latest-xlarge
+    runs-on: macos-13-large
     steps:
     - uses: actions/checkout@v3.5.2
       with:
