--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ permissions:
   packages: write
 jobs:
   Build:
-    runs-on: macos-13-large
+    runs-on: windows-2022-64core
     steps:
     - uses: actions/checkout@v3.5.2
       with:
