--- a/src/Maths/Silk.NET.Maths/Silk.NET.Maths.csproj
+++ b/src/Maths/Silk.NET.Maths/Silk.NET.Maths.csproj
@@ -8,9 +8,9 @@
         <WarningsAsErrors>true</WarningsAsErrors>
         <LangVersion>9.0</LangVersion>
 
-        <DefineConstants Condition="'$(TargetFramework)' == 'netcoreapp3.1' Or '$(TargetFramework)' == 'net5.0'">$(DefineConstants);SSE</DefineConstants>
-        <DefineConstants Condition="'$(TargetFramework)' == 'netcoreapp3.1' Or '$(TargetFramework)' == 'net5.0' Or '$(TargetFramework)' == 'netstandard2.1'">$(DefineConstants);BTEC_INTRINSICS;MATHF</DefineConstants>
-        <DefineConstants Condition="'$(TargetFramework)' == 'net5.0'">$(DefineConstants);POH;AdvSIMD</DefineConstants>
+        <DefineConstants Condition="'$(TargetFramework)' == 'netcoreapp3.1' Or '$(TargetFramework)' == 'net5.0' Or '$(TargetFramework)' == 'net6.0-android' Or '$(TargetFramework)' == 'net6.0-ios'">$(DefineConstants);SSE</DefineConstants>
+        <DefineConstants Condition="'$(TargetFramework)' == 'netcoreapp3.1' Or '$(TargetFramework)' == 'net5.0' Or '$(TargetFramework)' == 'net6.0-android' Or '$(TargetFramework)' == 'net6.0-ios' Or '$(TargetFramework)' == 'netstandard2.1'">$(DefineConstants);BTEC_INTRINSICS;MATHF</DefineConstants>
+        <DefineConstants Condition="'$(TargetFramework)' == 'net5.0' Or '$(TargetFramework)' == 'net6.0-android' Or '$(TargetFramework)' == 'net6.0-ios'">$(DefineConstants);POH;AdvSIMD</DefineConstants>
         <EnableNETAnalyzers>true</EnableNETAnalyzers>
         <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
     </PropertyGroup>
