--- a/sources/SilkTouchX/SilkTouchX.csproj
+++ b/sources/SilkTouchX/SilkTouchX.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="ClangSharp.PInvokeGenerator" Version="16.0.0" />
+    <PackageReference Include="CSharpier.Core" Version="0.25.0" />
+    <PackageReference Include="Humanizer.Core" Version="2.14.1" />
     <PackageReference Include="Microsoft.Build.Locator" Version="1.5.5" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.6.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.6.0" />
@@ -30,5 +32,8 @@
   <ItemGroup>
     <Content Include="test.json" />
   </ItemGroup>
+
+
+
 
 </Project>
