--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,8 @@ jobs:
     - uses: actions/checkout@v3.5.2
       with:
         submodules: 'false'
+    - name: Clone submodules non-recursively
+      run: git submodule update --init --depth 0
     - name: Setup Java JDK 11
       uses: actions/setup-java@v2.3.0
       with:
