--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -4,9 +4,11 @@ on:
     pull_request:
     merge_group:
 permissions:
-    pull-requests: write
+    statuses: write
     checks: write
     contents: write
+    pull-requests: write
+    actions: write
 jobs:
     Test:
         strategy:
