[IMPL] Pointer type autogeneration added (#5)
* Add autogenerated pointers

-Generation done in pointergen project
-used to regenerate GLFW code
-Passed all relevant tests

* Incorporating Review Feedback into Pointer Type Generation

-Unsafe.AsPointer overloads are now explicit
-String overloads are removed from Mut types
-Fixed outer->inner ordering, and added a toggle

-Removed a debug line left in from previous commit

* Second Review Commit

-Moved all single dimension pointers to the same function
-fixed up pointer handling
-changed secondary constructor visibility

* Switch Outermost direction

-Also fixed needing a function internally

* Fix Mutability Issue

--- a/sources/GLFW/Silk.NET.GLFW.csproj
+++ b/sources/GLFW/Silk.NET.GLFW.csproj
@@ -16,6 +16,7 @@
     <Compile Include="glfw3/Vidmode.gen.cs" />
     <Compile Include="Monitor.gen.cs" />
     <Compile Include="Window.gen.cs" />
+    <Compile Include="Window.gen.cs" />
     <!-- because Roslyn is a plonker -->
   </ItemGroup>
   <ItemGroup>
