--- a/src/SPIRV/Silk.NET.Shaderc/Silk.NET.Shaderc.csproj
+++ b/src/SPIRV/Silk.NET.Shaderc/Silk.NET.Shaderc.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <SilkPInvokeOverride Include="0" SilkClass="Silk.NET.Shaderc.Shaderc" DownstreamCondition="%24(TargetFramework.Contains('ios')) or %24(TargetFramework.Contains('mac')) or %24(TargetFramework.Contains('tvos'))" />
   </ItemGroup>
 
   <Import Project="..\..\..\build\props\bindings.props" />
