--- a/.github/workflows/spirv-cross.yml
+++ b/.github/workflows/spirv-cross.yml
@@ -16,12 +16,12 @@ jobs:
       fail-fast: false
       matrix:
         env:
-          - os: ubuntu-latest
-            name: Linux
+          - os: macos-latest
+            name: MacOS
             nuke_invoke: ./build.sh
             extras: |
-              sudo apt-get update
-              sudo apt-get install -y build-essential
+              # nothing extra(? https://github.com/actions/runner-images/blob/main/images/macos/macos-12-Readme.md)
+              echo "no extras for macos"
     name: ${{ matrix.env.name }} Build
     runs-on: ${{ matrix.env.os }}
     steps:
