--- a/src/Native/Silk.NET.SPIRV.Cross.Native/Silk.NET.SPIRV.Cross.Native.csproj
+++ b/src/Native/Silk.NET.SPIRV.Cross.Native/Silk.NET.SPIRV.Cross.Native.csproj
@@ -22,7 +22,7 @@
 
     <ItemGroup>
         <Content Include="build\net461\$(PackageId).props" PackagePath="build\net461\$(PackageId).props" />
-        <Content Include="build\netstandard2.0\$(PackageId).props" PackagePath="build\netstandard2.0\$(PackageId).props" />
+        <Content Include="build\netstandard2.0\$(PackageId).targets" PackagePath="build\netstandard2.0\$(PackageId).targets" />
 
         <Content Include="runtimes\linux-x64\native\libspirv-cross.so"
                  PackagePath="runtimes\linux-x64\native\libspirv-cross.so" />
@@ -39,6 +39,9 @@
 
         <Content Include="runtimes\osx-x64\native\libspirv-cross.dylib" PackagePath="runtimes\osx-x64\native\libspirv-cross.dylib" />
         <Content Include="runtimes\osx-arm64\native\libspirv-cross.dylib" PackagePath="runtimes\osx-arm64\native\libspirv-cross.dylib" />
+
+        <Content Include="runtimes\ios\native\libspirv-cross.a" PackagePath="runtimes\ios\native\libspirv-cross.a" />
+        <Content Include="runtimes\iossimulator\native\libspirv-cross.a" PackagePath="runtimes\iossimulator\native\libspirv-cross.a" />
     </ItemGroup>
 
 </Project>
