--- a/src/Native/Silk.NET.Shaderc.Native/Silk.NET.Shaderc.Native.csproj
+++ b/src/Native/Silk.NET.Shaderc.Native/Silk.NET.Shaderc.Native.csproj
@@ -22,7 +22,7 @@
 
     <ItemGroup>
         <Content Include="build\net461\$(PackageId).props" PackagePath="build\net461\$(PackageId).props" />
-        <Content Include="build\netstandard2.0\$(PackageId).props" PackagePath="build\netstandard2.0\$(PackageId).props" />
+        <Content Include="build\netstandard2.0\$(PackageId).targets" PackagePath="build\netstandard2.0\$(PackageId).targets" />
 
         <Content Include="runtimes\linux-x64\native\libshaderc_shared.so"
                  PackagePath="runtimes\linux-x64\native\libshaderc_shared.so" />
@@ -39,6 +39,9 @@
 
         <Content Include="runtimes\osx-x64\native\libshaderc_shared.dylib" PackagePath="runtimes\osx-x64\native\libshaderc_shared.dylib" />
         <Content Include="runtimes\osx-arm64\native\libshaderc_shared.dylib" PackagePath="runtimes\osx-arm64\native\libshaderc_shared.dylib" />
+
+        <Content Include="runtimes\ios\native\libshaderc.a" PackagePath="runtimes\ios\native\libshaderc.a" />
+        <Content Include="runtimes\iossimulator\native\libshaderc.a" PackagePath="runtimes\iossimulator\native\libshaderc.a" />
     </ItemGroup>
 
 </Project>
