Rewrite name trimming logic, modularise transformers

--- a/.editorconfig
+++ b/.editorconfig
@@ -380,3 +380,8 @@ csharp_style_unused_value_assignment_preference = discard_variable:suggestion
 csharp_style_var_for_built_in_types = true:suggestion
 csharp_style_var_elsewhere = true:suggestion
 csharp_style_var_when_type_is_apparent = true:suggestion
+
+resharper_foreach_can_be_converted_to_query_using_another_get_enumerator_highlighting = false
+resharper_foreach_can_be_partly_converted_to_query_using_another_get_enumerator_highlighting = false
+resharper_loop_can_be_converted_to_query_highlighting = false
+resharper_loop_can_be_partly_converted_to_query_highlighting = false
