Fix Tutorial 4.1 model file missing exception.

--- a/examples/CSharp/OpenGL Tutorials/Tutorial 4.1 - Model Loading/Tutorial 4.1 - Model Loading.csproj
+++ b/examples/CSharp/OpenGL Tutorials/Tutorial 4.1 - Model Loading/Tutorial 4.1 - Model Loading.csproj
@@ -19,6 +19,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <None Update="cube.model">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
       <None Update="cube.obj">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
