--- a/examples/CSharp/Direct3D11 Tutorials/Tutorial 1.3 - Textures/Tutorial 1.3 - Textures.csproj
+++ b/examples/CSharp/Direct3D11 Tutorials/Tutorial 1.3 - Textures/Tutorial 1.3 - Textures.csproj
@@ -11,7 +11,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+        <PackageReference Include="SixLabors.ImageSharp" Version="2.1.6" />
     </ItemGroup>
 
     <ItemGroup>
