--- a/.github/workflows/glfw.yml
+++ b/.github/workflows/glfw.yml
@@ -21,7 +21,7 @@ jobs:
             nuke_invoke: ./build.sh
             extras: |
               sudo apt-get update
-              sudo apt-get install -y xorg-dev libwayland-dev
+              sudo apt-get install -y xorg-dev libwayland-dev libxkbcommon-dev
           - os: windows-latest
             name: Windows
             nuke_invoke: ./build.cmd
