--- a/.github/workflows/vkd3d.yml
+++ b/.github/workflows/vkd3d.yml
@@ -25,6 +25,9 @@ jobs:
             extras: |
               sudo apt-get update 
 
+              wget http://mirrors.kernel.org/ubuntu/pool/main/v/vulkan-loader/libvulkan1_1.3.239.0-1_amd64.deb
+              sudo apt install ./libvulkan1_1.3.239.0-1_amd64.deb
+
               wget http://mirrors.kernel.org/ubuntu/pool/main/v/vulkan-loader/libvulkan-dev_1.3.239.0-1_amd64.deb
               sudo apt install ./libvulkan-dev_1.3.239.0-1_amd64.deb
               
